Seperate css into card and main

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>VMC Card Viewer</title>
     <script src="cards.js"></script>
     <script src="./lib/mustache.js"></script>
-    <link href="style.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
+    <link href="card.css" rel="stylesheet">
     <script src="render.js"></script>
 </head>
 
